# tensorcore

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  ONBOARDING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  performance_regression.md
.github/workflows/: ci.yml  hardware-evidence.yml  release.yml  sdk26-compile-evidence.yml
.icc/: completion-oracles.yaml  modularity-justifications.json
bench/: CMakeLists.txt  README.md  bench_attention.c  bench_gemm.c  bench_inference_7b.c
bindings/pytorch/: .gitignore  setup.py  tensorcore_torch_ext.cpp
bindings/pytorch/tensorcore_torch/: __init__.py
cmake/: compile_metallib.cmake  tensorcore.exports  tensorcore.pc.in  tensorcoreConfig.cmake.in
configs/: georefine_qwen_job.template.json  mesh_resource_jobs.json  mesh_resources.json  tensorcore-gpu-reconciliation-audit.service.example  tensorcore-gpu-reconciliation-audit.timer.example  tensorcore-scheduler.env.example  tensorcore-scheduler.service.example  tensorcore_cuda_smoke_job.template.json
docs/: README.md  api_overview.md  api_reference.md  architecture.md  attention.md  benchmarks.md  ci_and_scripts.md  codebase_audit.md  conv2d.md  cuda_comparison.md  deployment.md  development_setup.md  diloco.md  distributed.md  dtypes.md  eshkol_integration.md  extending.md  family_gating.md  faq.md  gemm.md  gguf.md  glossary.md  hardware_runner_setup.md  inference.md  integrating_tensorcore.md  kernels.md  memory_model.md  mesh_resource_scheduler.md  numerics.md  observability.md  precision_emulation.md  python.md  quantized.md  release_process.md  training_kernels.md  training_loop.md  troubleshooting.md
eshkol/: hello_tensorcore.esk  tensorcore.esk  tensorcore_bridge_smoke.esk
eshkol/bridge/: COMPILE-EVIDENCE.txt  INTEGRATION.md  tensorcore_codegen.compile-verified.txt  tensorcore_codegen.cpp  tensorcore_codegen.symbols.txt
examples/: CMakeLists.txt  README.md  decode_step.c  gguf_inspect.c  hello_gemm.c  mesh_training_demo.c  training_step.c
examples/native_sdk_consumer/: CMakeLists.txt  README.md  main.c  main.cpp
include/tensorcore/: attention.h  checkpoint.h  conv.h  cuda.h  device.h  diloco.h  distributed.h  dtype.h  eshkol_bridge.h  gemm.h  gguf.h  hip.h  memory_tier.h  quantized.h  status.h  tensorcore.h  training.h
kernels/metal/: conv2d.metal  conv2d_backward.metal  flash_attention.metal  flash_attention_backward.metal  flash_attention_backward_d128.metal  flash_attention_d128.metal  fused_norm_gemv.metal  gemm_async.metal  gemm_async_128.metal  gemm_quantized.metal  gemm_quantized_v2.metal  gemm_simdgroup.metal  gemm_simdgroup_128.metal  metal_simdgroup_event.h  tensorops_flash_attention.metal  tensorops_gemm.metal  training_kernels.metal
lib/c_api/: c_api.mm  c_api_cpu.c  eshkol_bridge.c
lib/core/: autotune.cpp  buffer_pool.mm  checkpoint_stub.cpp  cpu_float.h  device.mm  device_cpu.cpp  dtype.c  internal.h  memory_tier_stub.cpp  pipeline_cache.mm  status.c  trace.cpp
lib/cuda/: buffer.cpp  device.cpp  gemm.cpp  training.cu
lib/distributed/: diloco.cpp  distributed.mm  distributed_cpu.cpp  gloo_tcp.cpp  ring_local.mm  sparse_compress.cpp
lib/fallback/: accelerate_gemm.c  mps_gemm.mm
lib/hip/: README.md  device.cpp  gemm.cpp  hip_stub.cpp
lib/io/: gguf.c
lib/ops/: attention.mm  attention_cpu.cpp  conv.mm  conv2d_cpu.cpp  gemm.mm  gemm_cpu.cpp  gemm_cpu_amx.cpp  gemm_cpu_avx2.cpp  gemm_cpu_neon.cpp  quantized.mm  quantized_cpu.cpp  training.mm  training_cpu.cpp  unsupported_cpu.cpp
lib/tensorops/: tensorops_m5.mm  tensorops_select.c  tensorops_select.h
python/tensorcore/: __init__.py
python/tests/: test_basic.py
scripts/: bootstrap_windows_cpu.ps1  check_amx_bench_evidence.py  check_amx_bench_evidence_selftest.py  check_cpu_ops_runtime_evidence.py  check_cpu_ops_runtime_evidence_selftest.py  check_cuda_resource_admission.py  check_cuda_resource_admission_selftest.py  check_cuda_smoke_evidence.py  check_cuda_smoke_evidence_selftest.py  check_distributed_runtime_evidence.py  check_distributed_runtime_evidence_selftest.py  check_docs_links.py  check_eshkol_tensorcore_bridge_evidence.py  check_eshkol_tensorcore_bridge_evidence_selftest.py  check_fallback_runtime_evidence.py  check_fallback_runtime_evidence_selftest.py  check_georefine_qwen_artifact.py  check_georefine_qwen_artifact_selftest.py  check_georefine_qwen_live.py  check_georefine_qwen_live_selftest.py  check_hardware_runner_preflight.py  check_hardware_runner_preflight_selftest.py  check_hip_smoke_evidence.py  check_hip_smoke_evidence_selftest.py  check_hip_toolchain_evidence.py  check_hip_toolchain_evidence_selftest.py  check_live_mesh_training_evidence.py  check_live_mesh_training_evidence_selftest.py  check_m5_tensorops_runner_preflight.py  check_m5_tensorops_runner_preflight_selftest.py  check_mesh_git_access.py  check_mesh_git_access_selftest.py  check_mesh_resource_config_selftest.py  check_mesh_resource_inventory.py  check_mesh_resource_jobs.py  check_mesh_resource_preflight_evidence.py  check_mesh_resource_preflight_evidence_selftest.py  check_mesh_resource_preflights.py  check_mesh_resource_preflights_selftest.py  check_metal_ops_runtime_evidence.py  (+96 more)
tests/: CMakeLists.txt  README.md  test_amx_edge.c  test_amx_gemm.c  test_amx_probe.c  test_attention_backward.c  test_attention_correctness.c  test_buffer_pool.mm  test_checkpoint.c  test_checkpoint_concurrency.cpp  test_conv2d.c  test_cuda_gemm.c  test_device.c  test_diloco.c  test_diloco_gloo_fork.c  test_diloco_sparse_fork.c  test_dist_remote.c  test_distributed_ring.c  test_distributed_ring_fork.c  test_e2e_training.c  test_fused_norm_gemv.c  test_gemm_bf16.c  test_gemm_f16.c  test_gemm_f32.c  test_gemm_i8.c  test_gguf.c  test_gloo_fork.c  test_gloo_ring_fork.c  test_hip_device.c  test_hip_gemm.c  test_portable_cpu.c  test_quantized.c  test_sparse_compress.c  test_tensorops_runtime.c  test_tensorops_select.c  test_training_kernels.c  test_transformer_block.c
