[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorcore-apple"
version = "0.1.13"
description = "CUDA-equivalent tensor-core acceleration layer for Apple Silicon"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "tensorcore contributors" },
]
keywords = [
    "apple-silicon",
    "metal",
    "machine-learning",
    "gpu",
    "tensorcore",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "python" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
include = ["tensorcore*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
tensorcore = ["libtensorcore.dylib", "tensorcore.metallib"]
